adicionamos mais uma parte de texto no nosso código

--- a/Aula 1/index.html
+++ b/Aula 1/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Aula 1</title>
 </head>
 <body>
-  
+ <h1>Minha primeira Aula com mais um commit</h1>  
 </body>
 </html>
